--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,6 +78,13 @@ h5{
 .navbar-brand{
 	padding-top: 3px;
 }
+#search-row{
+	padding-top: 50px;
+}
+#maps-row{
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
 #slider-row{
 
 }
@@ -347,6 +354,6 @@ box-shadow:         0px 3px 5px 0px rgba(50, 50, 50, 0.75);
 
 .input-group{
     opacity: 0.7;
-    width:500px;
+    /*width:500px;*/
 }
 
