google sign in finished

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
 	/*background: url(../images/bg.jpg) top center no-repeat;*/
-	background: url(../images/bg_orange-100x50.jpg);
+	background: url(../images/books.jpg);
 }
 h1{
 	font-size: 4em;
@@ -344,7 +344,9 @@ box-shadow:         0px 3px 5px 0px rgba(50, 50, 50, 0.75);
 .no-touch .flex-direction-nav li a:hover{
 	background-color: transparent;
 }
-/*-------------------------------------------------------------------------------------*/
+
+
+/*------------------------sathira-------------------------------------------------------------*/
 
 .form-group{   
     
@@ -357,3 +359,94 @@ box-shadow:         0px 3px 5px 0px rgba(50, 50, 50, 0.75);
     /*width:500px;*/
 }
 
+.form-signin
+{
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-signin .form-signin-heading, .form-signin .checkbox
+{
+    margin-bottom: 10px;
+}
+.form-signin .checkbox
+{
+    font-weight: normal;
+}
+.form-signin .form-control
+{
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.form-signin .form-control:focus
+{
+    z-index: 2;
+}
+.form-signin input[type="text"]
+{
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.form-signin input[type="password"]
+{
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.account-wall
+{
+    margin-top: 100px;
+    padding: 10px 0px 20px 0px;
+    background-color: #f7f7f7;
+    -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    opacity: 0.9;
+    border-radius: 25px;
+}
+
+.userSignIn{
+        padding: 35px 45px 40px 62px;
+}
+
+.login-title
+{
+    padding: 0px 0px 10px 50px;
+    color: #555;
+    font-size: 18px;
+    font-weight: 400;
+    display: block;
+}
+.profile-img
+{
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+.need-help
+{
+    margin-top: 10px;
+}
+.new-account
+{
+    display: block;
+    margin-top: 10px;
+}
+
+ #map
+{
+        height: 500px;
+        width: 90%;
+        margin-left: 60px;
+        border-radius: 4%;
+}
