--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -448,7 +448,12 @@ box-shadow:         0px 3px 5px 0px rgba(50, 50, 50, 0.75);
  #map
 {
         height: 500px;
-        width: 90%;
+        width: 80%;
         margin-left: 60px;
         border-radius: 4%;
+}
+
+.search-by-cover
+{
+    padding-top: -300px;
 }
