--- a/chats/styles.css
+++ b/chats/styles.css
@@ -14,6 +14,7 @@ body{
 	background: white;
 	margin: 0 auto;
 	padding: 20px;
+        border-radius: 10px;
 }
 #chat_box{
 	width: 90%;
@@ -44,5 +45,4 @@ textarea{
 	width: 100%;
 	padding: 5px;
 	margin-bottom: 5px;
-	border-bottom: 1px solid silver;
 }
